--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>My Projects</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Tùy chọn -->
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
-    <p>This is a simple page hosted on GitHub Pages.</p>
+    <h1>Welcome to My Projects</h1>
+    <ul>
+        <li><a href="https://<username>.github.io/project-a" target="_blank">Project A</a></li>
+        <li><a href="https://<username>.github.io/project-b" target="_blank">Project B</a></li>
+        <li><a href="https://<username>.github.io/project-c" target="_blank">Project C</a></li>
+    </ul>
 </body>
 </html>
