--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Welcome to My Projects</h1>
     <ul>
-        <li><a href="https://<username>.github.io/project-a" target="_blank">Project A</a></li>
-        <li><a href="https://<username>.github.io/project-b" target="_blank">Project B</a></li>
-        <li><a href="https://<username>.github.io/project-c" target="_blank">Project C</a></li>
+        <li><a href="https://namnhGru.github.io/project-a" target="_blank">Project A</a></li>
+        <li><a href="https://namnhGru.github.io/project-b" target="_blank">Project B</a></li>
+        <li><a href="https://namnhGru.github.io/project-c" target="_blank">Project C</a></li>
     </ul>
 </body>
 </html>
